app/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
---
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox-control
